# ChangeLog for kde-misc/kdbus
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdbus/ChangeLog,v 1.6 2007/07/08 05:55:24 mr_bones_ Exp $

  08 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org> kdbus-0.8.6.ebuild:
  remove reference to old, removed dbus (bug #183696)

  12 Nov 2006; Caleb Tennis <caleb@gentoo.org> kdbus-0.8.6.ebuild:
  Fix dbus dep per bug #154521

  31 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> kdbus-0.8.6.ebuild:
  Remove dbus-core dependencies.

  29 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> kdbus-0.8.6.ebuild:
  Accept dbus-core as well as dbus.

  24 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> kdbus-0.8.6.ebuild:
  Add ~amd64 keyword.

*kdbus-0.8.6 (24 Jun 2006)

  24 Jun 2006; Petteri Räty <betelgeuse@gentoo.org>
  +files/kdbus-0.8.6-desktop.patch, +metadata.xml, +kdbus-0.8.6.ebuild:
  Initial commit. Thanks to Rohan McGovern <rohan@rohanpm.net> for the initial
  ebuild. Fixes bug #122967.
