@@ -3,14 +3,14 @@ MD5 95f1e223afc491596223a87e516b9b32 files/kdbus-0.8.6-desktop.patch 932
 RMD160 f8875dfaac885448637ad67fd0562f4a21105633 files/kdbus-0.8.6-desktop.patch 932
 SHA256 fe9ae1ecab939bd8da73483c834255e5b2b78408bfb6b8154b7ed0892c9d8fd0 files/kdbus-0.8.6-desktop.patch 932
 DIST kdbus-0.8.6.tar.gz 496119 RMD160 be63bed74061f4910485bcd1fcaae13a852bdeea SHA1 f9365eb720ccfa98db6a6a3cd94e94a5ff937f7d SHA256 0b2afb16368bcce6654cdda4c4a991dc402ef01f9875d2179262acced5969885
-EBUILD kdbus-0.8.6.ebuild 559 RMD160 556f223ba27ff620454b2f048c2c20c78a15a95c SHA1 1b7ef555ab3ab317eb437e206688cdafea60d288 SHA256 d9853a06d77bddc7fe7c5f48d16e5a31a3522e85d11b647c83a85ca8a4d08ca6
-MD5 3cc5fe72be1b1d11eda7c9af004a496a kdbus-0.8.6.ebuild 559
-RMD160 556f223ba27ff620454b2f048c2c20c78a15a95c kdbus-0.8.6.ebuild 559
-SHA256 d9853a06d77bddc7fe7c5f48d16e5a31a3522e85d11b647c83a85ca8a4d08ca6 kdbus-0.8.6.ebuild 559
-MISC ChangeLog 1008 RMD160 61adfed251d69819edc6cbd4362c2b925541149d SHA1 41822a29a382166be45af6e4e54a8f3933c0c6da SHA256 05b055ff8e317c330240139f5f816d447a33a551490b17dbb23a48b506b32877
-MD5 caa52ca7ec314a0ce26c0587f6344b6a ChangeLog 1008
-RMD160 61adfed251d69819edc6cbd4362c2b925541149d ChangeLog 1008
-SHA256 05b055ff8e317c330240139f5f816d447a33a551490b17dbb23a48b506b32877 ChangeLog 1008
+EBUILD kdbus-0.8.6.ebuild 526 RMD160 212f8f3ac2830f0e90bbd2e89373c8cdd3cb2b21 SHA1 6f6dd4a60ca0e3c12076ab6e042e48e47608e199 SHA256 78b4918760e4a50cc519ac1493d8cf92483c45d15aa7958fbfaa0cf61b5250f1
+MD5 d93ee4a66e05a9150cf8b177e2510e83 kdbus-0.8.6.ebuild 526
+RMD160 212f8f3ac2830f0e90bbd2e89373c8cdd3cb2b21 kdbus-0.8.6.ebuild 526
+SHA256 78b4918760e4a50cc519ac1493d8cf92483c45d15aa7958fbfaa0cf61b5250f1 kdbus-0.8.6.ebuild 526
+MISC ChangeLog 1118 RMD160 7e69d74ec55727a2893f91ec1c986b261118743d SHA1 bf9da20e03ac17ff07ea4fdee04e880783c1bf42 SHA256 46115ed926d412c255ec6693dba468bbdd7dbd53ed910fe1aafdc17a6f878c43
+MD5 c84b1a4bf9c01ff401957c8e26370c4d ChangeLog 1118
+RMD160 7e69d74ec55727a2893f91ec1c986b261118743d ChangeLog 1118
+SHA256 46115ed926d412c255ec6693dba468bbdd7dbd53ed910fe1aafdc17a6f878c43 ChangeLog 1118
 MISC metadata.xml 446 RMD160 7fe65b9abe297c4c56f40d7a2a84e5deaaaeb1a2 SHA1 6ce3270659c2a50cef7e7a1a63785bbfb87e7f61 SHA256 f41eb74674386a4724f014f8ae4229c4a0c30c9a7a0c4d631b74fd6066c3dc63
 MD5 7fd8863eb2ac2b60802736b4478eaefa metadata.xml 446
 RMD160 7fe65b9abe297c4c56f40d7a2a84e5deaaaeb1a2 metadata.xml 446
